--- a/src/app/eledger-login/eledger-login.component.css
+++ b/src/app/eledger-login/eledger-login.component.css
@@ -1,3 +1,7 @@
+.block {
+    margin-left: 100px;
+}
+
 .logo {
     float: left;
     margin-top: 20px;
@@ -19,7 +23,6 @@ input {
     width: 270px;
     border: 1px solid #46afec;
 }
-
 
 .loginButton {
     margin-top: 15px;
