--- a/src/app/add-customer/add-customer.component.html
+++ b/src/app/add-customer/add-customer.component.html
@@ -1,24 +1,11 @@
 <div class="container-fluid">
 
-    <div style="height: 150px;"></div>
+    <div style="height: 50px;"></div>
 
     <div class=" row">
         <div class="col-sm-2"></div>
         <div class="col-sm-8">
             <form [formGroup]='customerForm' (ngSubmit)="onSubmit()">
-
-                <div class="row">
-                    <div class="col-1"></div>
-
-                    <div class="col-2">
-                        <img class="logo hand" [routerLink]="['/home']" src="../../assets/image1.png" alt="logo">
-                    </div>
-
-                    <div class="col-8 text-center mt-2 rounded-circle">
-                        <h5 class="logoColor border border-dark rounded p-2"> <i class='fas fa-plus'
-                                style='color:white'></i> Add New Customer</h5>
-                    </div>
-                </div>
                 <br><br><br>
 
                 <div class="row">
@@ -30,8 +17,7 @@
                         <p class="mandatory d-inline"> *</p>
                     </div>
                     <div class="col-6 inputDiv">
-                        <input class="rounded w-100" [ngClass]="{'invalid' : isValid('name')}" formControlName="name"
-                            type="text" id="name" placeholder="Name" required>
+                        <input class="rounded w-100" [ngClass]="{'invalid' : isValid('name')}" formControlName="name" type="text" id="name" placeholder="Name" required>
                         <div class="feedback" *ngIf="isValid('name')">
                             <span *ngIf="customerForm.controls.name.errors.required">Field cannot be Empty!!!</span>
                         </div>
@@ -47,9 +33,7 @@
                         <p class="mandatory d-inline"> *</p>
                     </div>
                     <div class="col-6 inputDiv">
-                        <input class="rounded w-100" [ngClass]="{'invalid' : isValid('mobile') || isPresent}"
-                            type="number" pattern="[+0-9]{10}" id="contact" placeholder="Mobile No."
-                            formControlName="mobile">
+                        <input class="rounded w-100" [ngClass]="{'invalid' : isValid('mobile') || isPresent}" type="number" pattern="[+0-9]{10}" id="contact" placeholder="Mobile No." formControlName="mobile">
                         <div *ngIf="isPresent" class="feedback">Number Already Exists!!! Please use different number
                         </div>
                         <div class="feedback mobFeedback" *ngIf="isValid('mobile')">
@@ -67,9 +51,7 @@
                         <p class="mandatory d-inline"> *</p>
                     </div>
                     <div class="col-6 inputDiv">
-                        <input class="rounded w-100" [ngClass]="{'invalid' : isValid('amount')}"
-                            formControlName="amount" minlength="1" type="number" id="amount" placeholder="Amount"
-                            required>
+                        <input class="rounded w-100" [ngClass]="{'invalid' : isValid('amount')}" formControlName="amount" minlength="1" type="number" id="amount" placeholder="Amount" required>
                         <div class="feedback" *ngIf="isValid('amount')">
                             <span *ngIf="customerForm.controls.name.errors.required">Enter some money value!</span>
                         </div>
@@ -83,9 +65,7 @@
                         <p class="mandatory d-inline"> *</p>
                     </div>
                     <div class="col-6">
-                        <select href="#" id="txnType" formControlName="txnType"
-                            class="dropdown-toggle selectField btn w-100" data-toggle="dropdown" role="button"
-                            aria-haspopup="true" aria-expanded="false" required><span class="caret">Type</span>
+                        <select href="#" id="txnType" formControlName="txnType" class="dropdown-toggle selectField btn w-100" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" required><span class="caret">Type</span>
                             <option value="none" selected disabled> 
                                 Select an Option 
                             </option> 
@@ -100,9 +80,7 @@
                 <br><br><br>
                 <div class="row">
                     <div class="col-11 text-right">
-                        <button type="submit" [disabled]="!customerForm.valid"
-                            class="btn confirmBtn border border-dark nav-item nav-link-edit" data-toggle="modal"
-                            data-target="#successModal">Save</button>
+                        <button type="submit" [disabled]="!customerForm.valid" class="btn confirmBtn border border-dark nav-item nav-link-edit" data-toggle="modal" data-target="#successModal">Save</button>
                     </div>
                 </div>
             </form>
@@ -112,7 +90,7 @@
                 <div class="modal-content">
                     <div class="modal-body">
                         <p class="text-center">Successfully Added<br /></p>
-                        
+
                     </div>
                 </div>
             </div>
