--- a/src/app/my-account/my-account.component.css
+++ b/src/app/my-account/my-account.component.css
@@ -1,30 +1,49 @@
-.logo {
-    height: 95%;
-    width: 65px;
-}
-
-.head {
-    position: relative;
-    text-align: center;
-}
-
-.block {
-    margin-top: 150px;
-    width: 800px;
-}
-
-.info {
-    font-weight: bold;
-    margin-top: 7px;
-    font-size: large;
-    margin-left: 250px;
-}
-
-.data {
-    margin-top: 25px;
-    text-align: left;
-}
-
-.infoDetail {
-    margin-left: 120px;
-}
+    .logo {
+        height: 95%;
+        width: 65px;
+    }
+    
+    .head {
+        position: relative;
+        text-align: center;
+    }
+    
+    .block {
+        width: 800px;
+        margin: auto;
+        margin-top: 70px;
+        margin-left: 270px;
+    }
+    
+    .info {
+        font-weight: bold;
+        margin-top: 7px;
+        font-size: large;
+        margin-left: 250px;
+    }
+    
+    .data {
+        margin-top: 25px;
+        text-align: left;
+    }
+    
+    .infoDetail {
+        margin-left: 120px;
+    }
+    
+    .EditButton {
+        margin-top: 10px;
+    }
+    
+    .cancel {
+        color: #46afec;
+        font-size: large;
+        font-weight: bold;
+        text-decoration: underline;
+    }
+    
+    .cancel:hover {
+        background-color: rgb(155, 40, 40);
+        color: white;
+        text-decoration: underline;
+    }
