--- a/src/app/my-account/my-account.component.html
+++ b/src/app/my-account/my-account.component.html
@@ -1,14 +1,5 @@
 <div class="container-fluid block">
     <div class="row">
-        <div class="col-1"></div>
-        <div class="col-2">
-            <img class="logo" src="../../assets/image1.png" alt="logo">
-        </div>
-        <div class="col-8 text-center mt-2 rounded-circle">
-            <h5 class="logoColor border border-dark rounded p-2"> Your Account</h5>
-        </div>
-    </div>
-    <div class="row">
         <div class="col-sm-6 data">
             <span class="info">Name :</span>
         </div>
@@ -38,6 +29,16 @@
         </div>
         <div class="col-sm-6 data">
             <span class="infoDetail ">{{lenderId}}</span>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-6 data" style="text-align: right; margin-left: -100px; margin-top: 45px;">
+            <a class="cancel" href="http://localhost:4200/home">
+                 Cancel </a>
+        </div>
+        <div class="col-sm-6 data" style="text-align: right; margin-left: 20px;">
+            <button [routerLink]="['/editAccount']" class="btn confirmBtn border border-dark EditButton"><a
+                style="text-decoration: none; color: white;"> Edit </a></button>
         </div>
     </div>
 </div>
