--- a/src/app/home/customers/customers.component.html
+++ b/src/app/home/customers/customers.component.html
@@ -28,7 +28,7 @@
                         <button type="submit"
                             class="btn text-center confirmBtn border border-dark nav-item nav-link-edit"
                             (click)="onSubmit(); isReset=true"><i class="fa fa-search" aria-hidden="true"></i></button>
-                            &nbsp;<a *ngIf='isReset==true' class="btn-reset" href=""
+                            &nbsp;<a *ngIf='isReset==true' href=""
                             (click)='getListAtStart(); isSearch=false'>Reset</a>
                     </th>
                 </tr>
