--- a/src/app/home/reports/reports.component.css
+++ b/src/app/home/reports/reports.component.css
@@ -40,11 +40,7 @@ table {
 }
 
 .btn-reset {
-	position: absolute;
-	right: 15px;
-	margin-right: 95px;
-	margin-top: 50px;
-	float: left;
+	margin: 20px;
 	color: #46afec;
 	cursor: pointer;
 }
