--- a/src/app/home/reports/reports.component.html
+++ b/src/app/home/reports/reports.component.html
@@ -30,12 +30,10 @@
                             data-toggle="modal" data-target="#dateModal">Select
                             Date</button>
                         <button (click)='search(); isReset=true' type="submit"
-                            class="btn confirmBtn border border-dark nav-item nav-link-edit ml-3"><i class="fa fa-search"
-                                aria-hidden="true"></i></button>
-         
-                                <a *ngIf='isReset==true' class="btn-reset" href=""
-                                    (click)='getListAtStart(); isSearch=false' style="padding-bottom: 120px;">Reset</a>
-
+                            class="btn confirmBtn border border-dark nav-item nav-link-edit ml-3"><i
+                                class="fa fa-search" aria-hidden="true"></i></button>
+                        <a *ngIf='isReset==true' class="btn-reset" href=""
+                            (click)='getListAtStart(); isSearch=false'>Reset</a>
                     </th>
                 </tr>
 
