--- a/src/app/add-credit/add-credit.component.html
+++ b/src/app/add-credit/add-credit.component.html
@@ -1,39 +1,44 @@
 <div class="container-fluid">
-
-    <div style="height: 100px;"></div>
+    <div style="height: 80px;"></div>
     <div class=" row">
-        <div class="col-sm-2"></div>
-        <div class="col-sm-8">
+        <div class="col-2 text-right"> <a [routerLink]="['/home/customers']"><strong class="back">
+                    < Back</strong>
+            </a></div>
+        <div class="col-8">
 
-            <div class="row mb-2">
+            <div class="row">
+
                 <div class="col-2">
                     <img class="logo" [routerLink]="['/home']" src="../../assets/image1.png" alt="logo">
                 </div>
-                <div class="col-9 row logoColor border border-dark rounded">
-                    <div class="col-4 text-center">
-                        <h5 class="p-1 pt-3">
-                            <i class='fa fa-user mt-1 mr-1 val'></i>
-                            <span class="val"> {{borrowerName}}</span>
-                        </h5>
-                    </div>
-                    <div class="col-4 text-right mt-2">
-                        <h5 class="">
-                            <span class="val"> <i class="material-icons icon">phone</i><br>
-                                <i class='fas fa-rupee-sign icon'></i> </span>
-                        </h5>
-                    </div>
-                    <div class="col-4 mt-2">
-                        <h5>
-                            <span class="val"> {{borrowerPhone}} <br>
-                                {{balance}}</span>
-                        </h5>
-                    </div>
-
-
+                <div class="col-9 headerDiv logoColor border border-dark rounded text-center">
+                    <i class='fa fa-user mt-1 mr-1 val'></i>
+                    <span class="header" style="vertical-align: middle !important;"> {{borrowerName}}</span>
                 </div>
             </div>
-            <div class="col-7">
-                <div style="position: absolute; right: 20px; width: 80px; text-align:center;">
+            
+            <div class="row mt-3">
+                <div class="col-2">
+                </div>
+
+                <div class="col-9 row ">
+                    <div class="col-5 text-center logoColor border border-dark rounded">
+                        <i class="material-icons icon mt-1 mr-1">phone</i><span class="val pb-1"> {{borrowerPhone}}</span>
+                    </div>
+                    <div class="col-2"></div>
+
+                    <div class="col-5 text-center logoColor border border-dark rounded" style="left: 30px;">
+                        <h5>
+                            <span class="val">
+                                <i class='fas fa-rupee-sign icon mt-1'></i>&nbsp; {{balance}}</span>
+                        </h5>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-1"></div>
+
+                <div class="col-11 text-center">
                     <a [routerLink]="['/editcustomer']" class="btn logoColor border-dark">
                         <i class="fas fa-edit"></i> Edit
                     </a>
@@ -42,7 +47,7 @@
             <br><br><br>
 
             <form [formGroup]='creditForm' (ngSubmit)="onSubmit()">
-                <div style="margin-left: 10%; margin-right: 10%;">
+                <div>
                     <div class="row">
                         <div class="col-3">
                         </div>
@@ -52,7 +57,8 @@
                                 :</label>
                         </div>
                         <div class="col-3">
-                            <select href="#" id="txnType" class="dropdown-toggle inp selectField btn w-100" data-toggle="dropdown" role="button" required>
+                            <select href="#" id="txnType" class="dropdown-toggle inp selectField btn w-100"
+                                data-toggle="dropdown" role="button" required>
                                 <option value="" disabled selected>
                                     Select an Option
                                 </option>
@@ -69,7 +75,8 @@
                             <label for="name" class="d-inline label">Date :</label>
                         </div>
                         <div class="col-3">
-                            <input class="rounded w-100 border border-primary" formControlName="date" type="date" id="date" disabled>
+                            <input class="rounded w-100 border border-primary" formControlName="date" type="date"
+                                id="date" disabled>
                         </div>
                     </div>
                     <br>
@@ -82,7 +89,9 @@
 
                         </div>
                         <div class="col-3">
-                            <input [ngClass]="{'invalid' : isValid('amount')}" class="rounded w-100" formControlName="amount" min="0" type="number" id="amount" placeholder="Amount" required>
+                            <input [ngClass]="{'invalid' : isValid('amount')}" class="rounded w-100"
+                                formControlName="amount" min="0" type="number" id="amount" placeholder="Amount"
+                                required>
                             <div class="feedback" *ngIf="this.isNaN">Enter amount
                             </div>
                             <div class="feedback" *ngIf="isValid('amount')">
@@ -98,17 +107,17 @@
                             <label for="due" class="d-inline label"> Due Date:</label>
                         </div>
                         <div class="col-3">
-                            <input class="rounded w-100 border border-primary" type="date" id="due" formControlName="due" disabled>
+                            <input class="rounded w-100 border border-primary" type="date" id="due"
+                                formControlName="due" disabled>
                         </div>
                     </div>
                     <br><br>
                     <div class="row">
 
-                        <div class="col-4 text-left">
-                            <a class="link" [routerLink]="['/home/customers']">Back</a>
-                        </div>
+                        <div class="col-4"> </div>
                         <div class="col-4 text-center">
-                            <button id="save" type="submit" [disabled]="!creditForm.valid" class="btn confirmBtn border border-dark nav-item nav-link-edit">Save</button>
+                            <button id="save" type="submit" [disabled]="!creditForm.valid"
+                                class="btn confirmBtn border border-dark nav-item nav-link-edit">Save</button>
                             <div class="feedback" *ngIf="this.selectTxn">Select one transaction type
                             </div>
                             <div class="feedback" *ngIf="this.isNaN">Enter amount
