--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
     <div class=" row">
         <div class="col-sm-2 text-center">
             <a (click)="goBack()">
-                <strong class="btn-size hand">
+                <strong class="back">
                     < Back</strong></a>
         </div>
         <!-- <div class="col-sm-10">
