--- a/src/app/add-customer/add-customer.component.css
+++ b/src/app/add-customer/add-customer.component.css
@@ -22,6 +22,9 @@
     font-size: 20px;
 }
 
+.link {
+    color: #46afec;
+}
 .invalid {
     background-color: #fff0ff;
     border: 1px solid red;
