--- a/src/app/home/customers/customers.component.css
+++ b/src/app/home/customers/customers.component.css
@@ -16,60 +16,36 @@ btn {
 }
 
 td, th {
-	padding: 2px;
+	padding: 4px;
+	text-align: center;
+	vertical-align: middle;
+	
 }
 
-input {
-transition: background-color 0.1s;
-font-size: 17px;
-background-color : #f1faff;
-font-weight: 100;
-letter-spacing: 0.01em;
-box-shadow: none;
-padding: 2px 10px 2px 15px;
-}
-
-input:focus {
-	outline: none;
-	background-color: white;
-	box-shadow: 1px 1px 2px 3px #8ec7e9;
+.ted{
+	margin: auto;
 }
 
 table {
 	max-width: 1000px;
 	table-layout: fixed;
 	margin: auto;
-}
-
-tbody {
-	display: block;
-	height: 316px;
-	overflow: auto;
-	width: 100%;
 	word-wrap: break-word;
 }
 
-tbody tr {
-	display: table;
-	width: 100%;
-	table-layout: fixed;
-	word-wrap: break-word;
+td{
+	height: 50px;
 }
 
-thead {
-	display: table;
-	overflow: auto;
-	width: 100%
-}
 
 .name {
 	width: 28%;
 }
 
 .phone {
-	width: 35%;
+	width: 32%;
 }
 
 .txn {
-	width: 15%;
+	width: 18%;
 }
