--- a/src/app/home/customers/customers.component.html
+++ b/src/app/home/customers/customers.component.html
@@ -60,9 +60,9 @@
                         <div class="row icon-color">
                             
                             <div class="col-6 text-right">
-                                <i class="fas fa-edit hand" style="padding-right: 5px;"></i>
-                            </div>
-                            <div class="col-6 text-left" (click)="deleteCustomer(customer.id)">
+                                <a class="logo-color" [routerLink]="['/editcustomer']" (click)='sendData(customer)'><i class="fas fa-edit hand" style="padding-right: 5px;"></i></a>
+                            </div>  
+                            <div class="col-6 text-left" (click)="deleteCustomer(customer)">
                                 <i class="fas fa-trash hand"
                                     style="padding-left: 5px;"></i>
                             </div>
