--- a/src/app/home/reports/reports.component.html
+++ b/src/app/home/reports/reports.component.html
@@ -68,7 +68,7 @@
 
     </div>
     <br>
-    <div class="col-12 text-center" style="color: #46afec;">
+    <div class="col-sm-12 text-center" style="color: #46afec;">
         <pagination-controls (pageChange)="p = $event"></pagination-controls>
     </div>
 
@@ -79,7 +79,7 @@
                     <span class="cancel-icon text-left"><a data-dismiss="modal"><strong>x</strong></a></span>
                     <p class="text-center"><strong>Select Start Date and End Date</strong><br /></p>
                     <div class="actionsBtns text-center">
-                        <div class="col-12 text-center">
+                        <div class="col-sm-12 text-center">
                             <input type="date" id="startDate" name="startDate" value="2012-10-08" class="date inp"
                                 [(ngModel)]="startDate" aria-label="Search" autofocus /> to <input type="date"
                                 id="endDate" name="endDate" value="2012-10-08" class="date inp" [(ngModel)]="endDate"
