--- a/src/app/add-credit/add-credit.component.css
+++ b/src/app/add-credit/add-credit.component.css
@@ -8,7 +8,7 @@ input {
 }
 
 .icon {
-    font-size: 20px;
+    font-size: 17px;
 }
 
 .invalid {
@@ -39,7 +39,7 @@ input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
     .headName {
         font-size: 17px;
     }
-    .val {
+    .val, .icon {
         font-size: 15px;
     }
 }
