--- a/src/app/add-customer/add-customer.component.html
+++ b/src/app/add-customer/add-customer.component.html
@@ -6,14 +6,14 @@
                 <br><br><br>
 
                 <div class="row">
-                    <div class="col-2 text-right">
+                    <div class="col-sm-2 text-right">
                         <i class='fa fa-user mt-1 ml-3' style="font-size: 21px; color: #46afec;"></i>
                     </div>
-                    <div class="col-4">
+                    <div class="col-sm-4">
                         <label for="name" class="d-inline label">Customer Name</label>
                         <p class="mandatory d-inline"> *</p>
                     </div>
-                    <div class="col-5 inputDiv">
+                    <div class="col-sm-5 inputDiv">
                         <input class="rounded inp w-100" [ngClass]="{'invalid' : isValid('name')}"
                             formControlName="name" type="text" id="name" placeholder="Name" required>
                         <div class="feedback" *ngIf="isValid('name')">
@@ -23,14 +23,14 @@
                 </div>
                 <br>
                 <div class="row">
-                    <div class="col-2 text-right">
+                    <div class="col-sm-2 text-right">
                         <i class="material-icons icon rounded-circle mt-1 ml-2">phone</i>
                     </div>
-                    <div class="col-4">
+                    <div class="col-sm-4">
                         <label for="contact" class="d-inline label"> Mobile Number</label>
                         <p class="mandatory d-inline"> *</p>
                     </div>
-                    <div class="col-5 inputDiv">
+                    <div class="col-sm-5 inputDiv">
                         <input class="rounded inp w-100" [ngClass]="{'invalid' : isValid('mobile') || isPresent}"
                             type="number" pattern="[+0-9]{10}" id="contact" placeholder="Mobile No."
                             formControlName="mobile">
@@ -45,12 +45,12 @@
                 </div>
                 <br>
                 <div class="row">
-                    <div class="col-2 text-right"><i class='fas fa-rupee-sign icon2 rounded-circle'></i></div>
-                    <div class="col-4">
+                    <div class="col-sm-2 text-right"><i class='fas fa-rupee-sign icon2 rounded-circle'></i></div>
+                    <div class="col-sm-4">
                         <label for="amount" class="d-inline label"> Amount</label>
                         <p class="mandatory d-inline"> *</p>
                     </div>
-                    <div class="col-5 inputDiv">
+                    <div class="col-sm-5 inputDiv">
                         <input class="rounded inp w-100" [ngClass]="{'invalid' : isValid('amount')}"
                             formControlName="amount" minlength="1" type="number" id="amount" placeholder="Amount"
                             required>
@@ -61,12 +61,12 @@
                 </div>
                 <br>
                 <div class="row">
-                    <div class="col-2 text-right"><i class='fas fa-hand-holding-usd icon2 rounded-circle'></i></div>
-                    <div class="col-4">
+                    <div class="col-sm-2 text-right"><i class='fas fa-hand-holding-usd icon2 rounded-circle'></i></div>
+                    <div class="col-sm-4">
                         <label for="txnType" class="d-inline label"> Transaction Type</label>
                         <p class="mandatory d-inline"> *</p>
                     </div>
-                    <div class="col-5">
+                    <div class="col-sm-5">
                         <select href="#" id="txnType" formControlName="txnType"
                             class="dropdown-toggle inp selectField btn w-100" data-toggle="dropdown" role="button"
                             aria-haspopup="true" aria-expanded="false" required>
@@ -83,13 +83,13 @@
                 </div>
                 <br><br><br>
                 <div class="row">
-                    <div class="col-11 text-right">
+                    <div class="col-sm-11 text-right">
                         <button type="submit" [disabled]="!customerForm.valid"
                             class="btn confirmBtn border border-dark nav-item nav-link-edit">Save</button>
                     </div>
                 </div>
             </form>
         </div>
-        <div class="col-2"></div>
+        <div class="col-sm-2"></div>
     </div>
 </div>
