--- a/src/app/edit-customer/edit-customer.component.html
+++ b/src/app/edit-customer/edit-customer.component.html
@@ -1,46 +1,46 @@
 <div class="container-fluid">
     <div class=" row">
-        <div class="col-sm-2"></div>
-        <div class="col-sm-10">
+        <div class="col-sm-1"></div>
+        <div class="col-sm-11">
 
             <br><br><br>
             <div class="row">
-                <div class="col-1"></div>
+                <div class="col-sm-2"></div>
 
-                <div class="col-2 text-right">
+                <div class="col-sm-1">
                     <i class='fa fa-user mt-1 ml-3' style="font-size: 21px; color: #46afec;"></i>
                 </div>
-                <div class="col-2">
+                <div class="col-sm-2">
                     <label for="name" class="d-inline label">New Name</label>
                     <p class="mandatory d-inline"> *</p>
                 </div>
-                <div class="col-3 inputDiv">
+                <div class="col-sm-3 inputDiv">
                     <input class="rounded w-100 inp" type="text" id="name" name="name" placeholder="Enter New Name"
                         [(ngModel)]="customerName">
                 </div>
             </div>
             <br>
             <div class="row">
-                <div class="col-1"></div>
+                <div class="col-sm-2"></div>
 
-                <div class="col-2 text-right">
+                <div class="col-sm-1">
                     <i class="material-icons icon rounded-circle mt-1 ml-2">phone</i>
                 </div>
-                <div class="col-2">
+                <div class="col-sm-2">
                     <label for="contact" class="d-inline label">New Mobile Number</label>
                     <p class="mandatory d-inline"> *</p>
                 </div>
-                <div class="col-3 inputDiv">
+                <div class="col-sm-3 inputDiv">
                     <input class="rounded w-100 inp" type="text" id="phone" name="phone"
                         placeholder="Enter New Mobile Number" [(ngModel)]="customerPhone" required>
                 </div>
             </div>
             <br><br><br>
             <div class="row">
-                <div class="col-6 text-center">
+                <div class="col-sm-6 text-center">
                     <a class="back" [routerLink]="['/credit']"><strong>Cancel</strong></a>
                 </div>
-                <div class="col-2 text-right">
+                <div class="col-sm-2 text-right">
                     <button (click)='onSubmit()' type="submit"
                         class="btn confirmBtn text-right border border-dark nav-item nav-link-edit" data-toggle="modal"
                         data-target="#successModal">Update</button>
