--- a/src/app/eledger-login/eledger-login.component.html
+++ b/src/app/eledger-login/eledger-login.component.html
@@ -1,8 +1,8 @@
 <div class="container-fluid block">
-    <div style="height: 150px;"></div>
+    <div style="height: 120px;"></div>
     <div class="row">
-        <div class="col-3"></div>
-        <div class="col-5">
+        <div class="col-sm-2"></div>
+        <div class="col-sm-5">
             <div class="row">
                 <div class="col-5 text-right">
                     <h2 class="logo">
