--- a/src/app/home/customers/customers.component.html
+++ b/src/app/home/customers/customers.component.html
@@ -50,7 +50,7 @@
         </tbody>
     </table>
     <br>
-    <div class="col-12 text-center" style="color: #46afec;">
+    <div class="col-sm-12 text-center" style="color: #46afec;">
         <pagination-controls (pageChange)="p = $event"></pagination-controls>
     </div>
 </div>
