--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,7 +12,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-12 text-center"><button type="button" class="btn confirmBtn border-dark rounded p-2 mt-2"
+        <div class="col-sm-12 text-center"><button type="button" class="btn confirmBtn border-dark rounded p-2 mt-2"
                 [routerLink]="['/addcustomer']"><i class='fa fa-plus'></i>
                 <strong> Add New Customer </strong></button>
         </div>
@@ -31,13 +31,13 @@
                         <div class="actionsBtns">
                             <form action="#" method="post">
                                 <div class="row">
-                                    <div class="col-6">
+                                    <div class="col-sm-6">
                                         <input type="submit"
                                             class="btn btn-square confirmBtn border border-dark rounded p-2"
                                             (click)='clearData()' [routerLink]="['/login']" data-dismiss="modal"
                                             value="Yes" />
                                     </div>
-                                    <div class="col-6 text-right">
+                                    <div class="col-sm-6 text-right">
                                         <button class="btn btn-square confirmBtn border border-dark rounded p-2    "
                                             data-dismiss="modal"> No </button>
                                     </div>
