--- a/src/app/edit-customer/edit-customer.component.css
+++ b/src/app/edit-customer/edit-customer.component.css
@@ -21,3 +21,9 @@
 input{
     border: 1px solid #46afec;
 }
+
+.cancel{
+    margin-top: 10px;
+    font-size: large;
+    text-decoration: underline;
+}
