--- a/src/app/home/customers/customers.component.css
+++ b/src/app/home/customers/customers.component.css
@@ -11,10 +11,6 @@ tr:nth-child(even) {
 }
 
 
-btn {
-	height: 30px;
-}
-
 td, th {
 	padding: 4px;
 	text-align: center;
@@ -37,6 +33,9 @@ td{
 	height: 50px;
 }
 
+.delete{
+	color: rgb(250, 94, 94);
+}
 
 .name {
 	width: 20%;
@@ -49,13 +48,27 @@ td{
 .txn {
 	width: 20%;
 }
+
 .date {
 	width: 25%;
 }
-.edit {
+
+.edit {	
 	width: 15%;
 }
 
 .icon-color{
 	color: #46afec;
+}
+
+.btn-size{
+	width: 50px;
+}
+
+.delete:hover {
+	color: rgb(214, 34, 34);	
+  }
+
+.modal-size{
+	width: 320px;
 }
