--- a/src/app/edit-customer/edit-customer.component.html
+++ b/src/app/edit-customer/edit-customer.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <div class=" row">
-        <div class="col-sm-2"></div>
-        <div class="col-sm-10">
+        <div class="col-sm-1"></div>
+        <div class="col-sm-11">
 
             <br><br><br>
             <div class="row">
@@ -37,7 +37,7 @@
             </div>
             <br><br><br>
             <div class="row">
-                <div class="col-6 text-center">
+                <div class="col-6 text-center cancel">
                     <a class="back" [routerLink]="['/home/customers']"><strong>Cancel</strong></a>
                 </div>
                 <div class="col-2 text-right">
