--- a/src/app/home/customers/customers.component.html
+++ b/src/app/home/customers/customers.component.html
@@ -46,7 +46,7 @@
             <tbody>
                 <tr id="tbody" class=""
                     *ngFor='let customer of customers | paginate: { itemsPerPage: 6, currentPage: p }'>
-                    <td class="text-center name pt-2"><a (click)="sendData(customer)" class="blue  "
+                    <td class="text-center name pt-2"><a (click)="sendData(customer)" class="logo-color hand"
                             [routerLink]="['/credit']">{{customer.name}}</a></td>
                     <td class="text-center phone pt-2">{{customer.phone}}</td>
                     <td class="text-center txn pt-2" *ngIf='customer.amount<0'>
@@ -58,13 +58,13 @@
                     <td class="text-center date pt-2">{{customer.date | date:'medium' }}</td>
                     <td class="text-center edit pt-2">
                         <div class="row icon-color">
-                            
+
                             <div class="col-6 text-right">
-                                <a class="logo-color" [routerLink]="['/editcustomer']" (click)='sendData(customer)'><i class="fas fa-edit hand" style="padding-right: 5px;"></i></a>
-                            </div>  
-                            <div class="col-6 text-left" (click)="deleteCustomer(customer)">
-                                <i class="fas fa-trash hand"
-                                    style="padding-left: 5px;"></i>
+                                <a class="logo-color" [routerLink]="['/editcustomer']" (click)='sendData(customer)'><i
+                                        class="fas fa-edit hand" style="padding-right: 5px;"></i></a>
+                            </div>
+                            <div class="col-6 text-left" data-toggle="modal" data-target="#deleteModal"><a >
+                                <i class="fas fa-trash hand delete" style="padding-left: 5px;"></i></a>
                             </div>
                         </div>
                     </td>
@@ -75,4 +75,27 @@
     <div class="col-12 text-center" style="color: #46afec;">
         <pagination-controls (pageChange)="p = $event"></pagination-controls>
     </div>
-</div>
+
+    <div class="modal centered" id="deleteModal" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog modal-sm">
+            <div class="modal-content modal-size">
+                <div class="modal-body">
+                    <p class="text-center">Do you want to Delete this Customer ?<br /></p>
+                    <div class="actionsBtns">
+                        <form action="#" method="post">
+                            <div class="row">
+                                <div class="col-6">
+                                    <button class="btn btn-size confirmBtn border border-dark rounded p-2"
+                                    (click)='deleteCustomer(customer)' data-dismiss="modal">Yes</button>
+                                </div>
+                                <div class="col-6 text-right">
+                                    <button class="btn btn-size confirmBtn border border-dark rounded p-2"
+                                        data-dismiss="modal"> No </button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
