--- a/src/app/my-account/my-account.component.html
+++ b/src/app/my-account/my-account.component.html
@@ -1,44 +1,46 @@
 <div class="container-fluid block">
-    <div class="row">
-        <div class="col-sm-6 data">
-            <span class="info">Name :</span>
+    <div class="col-10">
+        <div class="row">
+            <div class="col-sm-6 data">
+                <span class="info">Name :</span>
+            </div>
+            <div class="col-sm-6 data">
+                <span class="infoDetail">{{name}}</span>
+            </div>
         </div>
-        <div class="col-sm-6 data">
-            <span class="infoDetail">{{name}}</span>
+        <div class="row">
+            <div class="col-sm-6 data">
+                <span class="info">Phone :</span>
+            </div>
+            <div class="col-sm-6 data">
+                <span class="infoDetail">{{phone}}</span>
+            </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-6 data">
-            <span class="info">Phone :</span>
+        <div class="row">
+            <div class="col-sm-6 data">
+                <span class="info">Shop-Name :</span>
+            </div>
+            <div class="col-sm-6 data">
+                <span class="infoDetail">{{shopName}}</span>
+            </div>
         </div>
-        <div class="col-sm-6 data">
-            <span class="infoDetail">{{phone}}</span>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-6 data">
-            <span class="info">Shop-Name :</span>
-        </div>
-        <div class="col-sm-6 data">
-            <span class="infoDetail">{{shopName}}</span>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-6 data">
-            <span class="info">Lender-Id :</span>
-        </div>
-        <div class="col-sm-6 data">
-            <span class="infoDetail ">{{lenderId}}</span>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-6 data" style="text-align: right; margin-left: -100px; margin-top: 45px;">
-            <a class="cancel" href="http://localhost:4200/home">
-                 Cancel </a>
-        </div>
-        <div class="col-sm-6 data" style="text-align: right; margin-left: 20px;">
-            <button [routerLink]="['/editAccount']" class="btn confirmBtn border border-dark EditButton"><a
-                style="text-decoration: none; color: white;"> Edit </a></button>
+        <div class="row">
+            <div class="col-sm-6 data">
+                <span class="info">Lender-Id :</span>
+            </div>
+            <div class="col-sm-6 data">
+                <span class="infoDetail ">{{lenderId}}</span>
+            </div>
+        </div>  
+        <div class="row">
+            <div class="col-sm-6 data" style="text-align: right; margin-left: -100px; margin-top: 45px;">
+                <a class="cancel" href="http://localhost:4200/home">
+                    Cancel </a>
+            </div>
+            <div class="col-sm-6 data" style="text-align: right; margin-left: 20px;">
+                <button [routerLink]="['/editAccount']" class="btn confirmBtn border border-dark EditButton"><a> Edit
+                    </a></button>
+            </div>
         </div>
     </div>
 </div>
