--- a/src/app/edit-customer/edit-customer.component.html
+++ b/src/app/edit-customer/edit-customer.component.html
@@ -38,7 +38,7 @@
             <br><br><br>
             <div class="row">
                 <div class="col-6 text-center cancel">
-                    <a class="back" [routerLink]="['/home/customers']"><strong>Cancel</strong></a>
+                    <a class="logo-color" [routerLink]="['/home/customers']"><strong>Cancel</strong></a>
                 </div>
                 <div class="col-2 text-right">
                     <button (click)='onSubmit()' type="submit"
