--- a/src/app/eledger-login/eledger-login.component.html
+++ b/src/app/eledger-login/eledger-login.component.html
@@ -25,7 +25,9 @@
                         <label class="logo" for="UserId">Mobile Number/Email:</label>
                     </div>
                     <div class="col-sm-6">
-                        <input class=" w-100" [(ngModel)]="userID" [className]="isValid? 'form-control': 'form-control invalidInput'" type="text" name="uname" required>
+                        <input class=" w-100" [(ngModel)]="userID"
+                            [className]="isValid? 'form-control': 'form-control invalidInput'" type="text" name="uname"
+                            required>
                     </div>
                 </div>
                 <div class="row ">
@@ -33,17 +35,20 @@
                         <label class="logo" for="password">Password:</label>
                     </div>
                     <div class="col-sm-6">
-                        <input class=" w-100" [(ngModel)]="password" id="password" [className]="isValid? 'form-control': 'form-control invalidInput'" type="password" name="password" required>
+                        <input class=" w-100" [(ngModel)]="password" id="password"
+                            [className]="isValid? 'form-control': 'form-control invalidInput'" type="password"
+                            name="password" required>
                         <div [className]="isValid? 'valid': 'invalidEntry'"><span style="margin-top: 5px;">Invalid
                                 input Id / Password !</span></div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-sm-5">
-                        <span class="logo"><a href="#">Forgot Password?</a></span>
+                        <span class="logo"><a class="logo-color" href="#">Forgot Password?</a></span>
                     </div>
                     <div class="col-sm-7 text-right">
-                        <button (click)="login()" type="submit" class=" btn confirmBtn border border-dark loginButton" style="text-decoration: none; color: white;">
+                        <button (click)="login()" type="submit" class=" btn confirmBtn border border-dark loginButton"
+                            style="text-decoration: none; color: white;">
                             Login
                         </button>
                     </div>
