--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,10 @@
 <div class="container">
     <br>
     <div class="row">
-        <div class="id2"><img [src]="LOGO2" /><a class="logo-color" [routerLink]='["/home/customers"]'>Customers</a></div>
-        <div class="id2 hand"><img [src]="LOGO3" /><a class="logo-color" [routerLink]='["/home/reports"]'>Reports</a></div>
+        <div class="id2"><img [src]="LOGO2" /><a class="logo-color" [routerLink]='["/home/customers"]'>Customers</a>
+        </div>
+        <div class="id2 hand"><img [src]="LOGO3" /><a class="logo-color" [routerLink]='["/home/reports"]'>Reports</a>
+        </div>
         <div class="id2 dropdown"><img [src]="LOGO4" /><a class="logo-color dropbtn" href="/home/profile"
                 [routerLink]='["/home"]'>Profile</a>
             <div class="dropdown-content">
