--- a/src/app/editmy-account/editmy-account.component.html
+++ b/src/app/editmy-account/editmy-account.component.html
@@ -41,7 +41,7 @@
     </div>
     <div class="row">
         <div class="col-sm-6 data" style="text-align: right; margin-left: -100px; margin-top: 45px;">
-            <a class="cancel" href="http://localhost:4200/myaccount">
+            <a class="back" href="http://localhost:4200/myaccount">
                  Cancel </a>
         </div>
         <div class="col-sm-6 data" style="text-align: right; margin-left: 30px;">
