--- a/src/styles.css
+++ b/src/styles.css
@@ -56,10 +56,13 @@ input:focus {
 .back {
     cursor: pointer;
     color: #46afec;
+    font-weight: bold;
 }
 
 .back:hover {
     text-decoration: underline;
+    background-color: rgb(236, 32, 32);
+    color: white;
 }
 
 .hand {
