--- a/src/app/edit-customer/edit-customer.component.html
+++ b/src/app/edit-customer/edit-customer.component.html
@@ -37,7 +37,7 @@
             </div>
             <br><br><br>
             <div class="row">
-                <div class="col-6 text-center">
+                <div class="col-sm-6 text-center">
                     <a class="back" [routerLink]="['/home/customers']"><strong>Cancel</strong></a>
                 </div>
                 <div class="col-sm-2 text-right">
