--- a/src/app/eledger-login/eledger-login.component.html
+++ b/src/app/eledger-login/eledger-login.component.html
@@ -4,12 +4,12 @@
         <div class="col-sm-2"></div>
         <div class="col-sm-5">
             <div class="row">
-                <div class="col-5 text-right">
+                <div class="col-sm-5 text-right">
                     <h2 class="logo">
                         <img src="../../assets/image1.png"> Login
                     </h2>
                 </div>
-                <div class="col-7 text-right">
+                <div class="col-sm-7 text-right">
                     <button class="btn confirmBtn border border-dark signUpButton"><a
                             style="text-decoration: none; color: white;" [routerLink]="['/sign-up']">SignUp</a>
                     </button>
