--- a/src/app/home/customers/customers.component.html
+++ b/src/app/home/customers/customers.component.html
@@ -64,7 +64,7 @@
                                         class="fas fa-edit hand" style="padding-right: 5px;"></i></a>
                             </div>
                             <div class="col-6 text-left" data-toggle="modal" data-target="#deleteModal"><a>
-                                    <i class="fas fa-trash hand delete" style="padding-left: 5px;"></i></a>
+                                    <i class="fas fa-trash-alt hand delete" style="padding-left: 5px;"></i></a>
                             </div>
                         </div>
                     </td>
